[tool.poetry]
name = "abm-shape-collection"
version = "0.5.0"
description = "Collection of tasks for analyzing cell shapes."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.8.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
aicsshparam = "^0.1.1"
vtk = "^9.2.5"
trimesh = "^3.18.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
pylint = "^2.16.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.8.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.2.0"
sphinx_mdinclude = "^0.5.3"
tox = "^3.26.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
]
good-names = ["i", "j", "k", "x", "y", "z"]

[tool.pylint.design]
max-args = 10 # maximum number of arguments for function / method

[tool.pylint.similarities]
min-similarity-lines = 10 # minimum lines number of a similarity

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "aicsshparam.*",
    "pandas.*",
    "scipy.*",
    "skimage.*",
    "sklearn.*",
    "trimesh.*",
    "vtkmodules.*",
]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39,310}, format, lint, typecheck
skipsdist=True

[testenv]
allowlist_externals = poetry
commands =
    poetry run pytest --cov-report html --cov=src/ tests/

[testenv:format]
commands =
    poetry run black -l 100 src/ tests/
    poetry run isort -l 100 src/ tests/

[testenv:lint]
commands =
    poetry run pylint --ignore-patterns=test.*?py src/ tests/ --fail-under=9.0

[testenv:typecheck]
commands =
    poetry run mypy --disallow-untyped-calls --disallow-untyped-defs --disallow-incomplete-defs src
"""
